--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
     <main>
         <!-- Expertise Section -->
-        <section class="expertise-container bg-white py-16" id="expertise">
+        <section class="expertise-container bg-[#E9E6E0] py-16" id="expertise">
             <h2 class="section-main-title  pb-16" data-aos="fade-right" data-aos-duration="1500">expertise</h2>
             <div class="card-container">
 
@@ -163,7 +163,7 @@
         </section>
 
         <!-- Condition d'intervention Section -->
-        <section class="intervention-container bg-white p-20 lg:pb-32 max-md:px-12" id="intervention">
+        <section class="intervention-container bg-[#E9E6E0] p-20 lg:pb-32 max-md:px-12" id="intervention">
             <h2 class="section-main-title max-md:text-left pb-16">Conditions d'intervention</h2>
             <div class="intervention-card-container grid lg:grid-cols-3 gap-8 ">
                 <div class="cards-block">
@@ -199,7 +199,7 @@
         </section>
 
         <section class="about-container p-20 max-md:px-12" id="intervenant">
-            <div class="about-text-container ld:flex">
+            <div class="about-text-container lg:flex">
                 <img src="../assets/img/Sans titre.png" alt="Image intervenant" class="intervenant-img lg:relative w-60 max-md:m-auto -top-32">
                 <div class="about-text lg:relative -left-12">
                     <h2 class="section-main-title max-md:text-center !text-left relative">Votre intervenant</h2>
