--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="expertise-card lg:flex max-md:p-0 mb-12 lg:mb-24" data-aos="fade-up">
-                    <div class="text-expertise-card max-md:pr-0 max-md:text-right max max-md:pb-6">
+                    <div class="text-expertise-card max-md:pr-0 max-md:pl-6 max-md:text-right max max-md:pb-6">
                         <h3>Fiscalité des structures <br>et des groupes</h3>
                         <ul>
                             <li>Régimes spécifiques d’impôts sur les sociétés des bailleurs sociaux, aménageurs publics
@@ -202,13 +202,13 @@
             <div class="about-text-container lg:flex">
                 <img src="../assets/img/Sans titre.png" alt="Image intervenant" class="intervenant-img lg:relative w-60 max-md:m-auto -top-32">
                 <div class="about-text lg:relative -left-12">
-                    <h2 class="section-main-title max-md:text-center !text-left relative">Votre intervenant</h2>
+                    <h2 class="section-main-title max-md:!text-center !text-left relative">Votre intervenant</h2>
                     <p class="text-white lg:pl-8 py-6 max-md:text-center">Avocat associé chez Notio depuis 2020, je bénéficie de plus de 20 ans d'expérience en droit
                         fiscal et immobilier. J'ai occupé des postes de direction chez EY Law, CDA et CJA, et j'ai
                         également travaillé comme fiscaliste pour l'Union Nationale des Fédérations d'HLM et dans le
                         secteur bancaire. J'ai co-écrit et publié plusieurs ouvrages, notamment sur la fiscalité de
                         l'immobilier social et des HLM, ainsi que sur les baux d’habitation. </p>
-                    <button class=" button-about pointer lg:ml-8 max-md:m-auto max-md:w-fit" onclick="window.open('../assets/img/cv.pdf', '_blank')">Télécharger
+                    <button class=" button-about pointer lg:ml-8 max-md:m-auto max-md:!w-full" onclick="window.open('../assets/img/cv.pdf', '_blank')">Télécharger
                         cv</button>
 
                 </div>
