--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <img src="../assets/img/Sans titre.png" alt="Image intervenant" class="intervenant-img lg:relative w-60 max-md:m-auto -top-32">
                 <div class="about-text lg:relative -left-12">
                     <h2 class="section-main-title max-md:!text-center !text-left relative">Votre intervenant</h2>
-                    <p class="text-white lg:pl-8 py-6 max-md:text-center">Avocat associé chez Notio depuis 2020, je bénéficie de plus de 20 ans d'expérience en droit
+                    <p class="text-white lg:pl-8 py-6 max-md:text-center lg:w-4/5">Avocat associé chez Notio depuis 2020, je bénéficie de plus de 20 ans d'expérience en droit
                         fiscal et immobilier. J'ai occupé des postes de direction chez EY Law, CDA et CJA, et j'ai
                         également travaillé comme fiscaliste pour l'Union Nationale des Fédérations d'HLM et dans le
                         secteur bancaire. J'ai co-écrit et publié plusieurs ouvrages, notamment sur la fiscalité de
